...
      iconSvgXml: sportsManagerIcons.activeRequest,
      color: theme.colors.primary,
      onPress: () => navigation.navigate('SportsRaiseRequest'),
    },
    {
      id: 'active-requests',
      title: 'Active Requests',
      iconSvgXml: sportsManagerIcons.activeRequest,
      color: theme.colors.primary,
      badge: stats?.active_bookings,
      onPress: () => navigation.navigate('SportsActiveRequests'),
    },
    {
...
      iconSvgXml: sportsManagerIcons.courtsList,
      color: theme.colors.primary,
      onPress: () => navigation.navigate('CourtSetup'),
    },
    {
      id: 'comm-box',
      title: 'Notice Board',
      iconSvgXml: sportsManagerIcons.commBox,
      color: theme.colors.primary,
      badge: 0,
      onPress: () => navigation.navigate('CommBox'),
    },
  ];
...
